--- a/CSS/style.css
+++ b/CSS/style.css
@@ -65,4 +65,7 @@ body {
     font-size: 50px;
     padding: 50px 50px 50px 50px;
 }
-    
+#how-it-works{
+    display: flex;
+    justify-content: center;
+}
