--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap');
 * {
   margin: 0px;
   padding: 0px;
@@ -7,12 +8,16 @@ body {
   font-family: "Lato", sans-serif;
   background-color: #eee;
 }
+#header-portion{
+    position: sticky;
+    top: 0px;
+background-color: #eee;
+}
 #header{
     padding: 0px 20px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-
 }
 #header-img{
     width: 300px;
@@ -43,14 +48,15 @@ body {
 #email{
     width: 17rem;
     padding: 5px;
-    margin-bottom: 10px;
+    margin-bottom: 15px;
 }
-.submit-btn{
+.btn{
     background-color: #f1c40f;
     border: none;
-    padding: 0px 15px;
+    padding: 5px 15px;
     cursor: pointer;
-    font-size: 30px;
+    font-size: 20px;
+    font-weight: 700;
 }
 #premium-material, #fast-shipping, #quality-assurance{
     display: flex;
@@ -58,7 +64,7 @@ body {
 }
 .feature-detail{
     font-size: 17px;
-    font-weight: 600;
+    font-weight: 500;
 }
 .icon{
     color: darkorange;
@@ -68,4 +74,45 @@ body {
 #how-it-works{
     display: flex;
     justify-content: center;
+}
+#pricing{
+    margin: 15px 0px;
+    display: flex;
+    justify-content: space-evenly;
+}
+.trombone-price{
+    height: 300px;
+    width: 30vw;
+    border: 1px solid black;
+    border-radius: 4px;
+}
+.type{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: lightgray;
+    height: 50px;
+    width: 100%;
+}
+.type h3{
+    font-size: 15px;
+    font-weight: 1500;
+}
+
+.content{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.details{
+    padding: 15px;
+}
+.details p{
+    padding: 5px;
+    text-align: center;
+    font-weight: 700;
+}
+.select-btn{
+    font-weight: 500;
 }
